@@ -37,16 +37,13 @@ public class KeyHash extends Parameter implements InlineParameter {
 
     @Override
     public void read(RTPSByteBuffer bb, int length) {
-        readBytes(bb, length); // TODO: default reading. just reads to byte[] in
-                               // super class.
+        readBytes(bb, length); // TODO: default reading. just reads to byte[] in super class.
     }
 
     @Override
     public void writeTo(RTPSByteBuffer bb) {
-        writeBytes(bb); // TODO: default writing. just writes byte[] in super
-                        // class
+        writeBytes(bb); // TODO: default writing. just writes byte[] in super class
     }
-    
     
     public boolean equals(Object other) {
         if (other instanceof KeyHash) {
